--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -367,7 +367,7 @@
                             <div class="form-group">
 
                                 <div class="col-md-6">
-                                    <label class="font-weight "> Body Type</label>
+                                    <label class="font-weight "> Body type</label>
 
                                     <select class="form-control input-rounded " ng-model="profile.login_user.body_type">
                                         <option  value="">Select</option>
@@ -396,7 +396,7 @@
                             <div class="form-group">
 
                                 <div class="col-md-6">
-                                    <label class="font-weight "> Physical Type</label>
+                                    <label class="font-weight "> Physical type</label>
 
                                     <select class="form-control input-rounded "
                                             ng-model="profile.login_user.physical_status">
@@ -407,7 +407,7 @@
                                 </div>
 
                                 <div class="col-md-6">
-                                    <label class="font-weight  "> Mother Tongue</label>
+                                    <label class="font-weight  "> Mother tongue</label>
                                     <select class="form-control input-rounded " ng-model="selectLanguage.motherTongue"
 
                                             ng-options="item.mothertongue for item in motherTongueList track by item.id_mothertongue">
@@ -421,7 +421,7 @@
                             <div class="form-group">
 
                                 <div class="col-md-6">
-                                    <label class="font-weight "> Marital Status</label>
+                                    <label class="font-weight "> Marital tatus</label>
 
                                     <select class="form-control input-rounded "
                                             ng-model="profile.login_user.marital_status">
