--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -181,7 +181,7 @@
                             </span>
                         <span ng-if="showPassword">
                         <div class="user-error-msg-arrow" ></div>
-                        <div class="user-error-msg" >Enter Password</div>
+                        <div class="user-error-msg" >{{passwordError}}</div>
                     </span>
                     </div>
                 </div>
