--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -458,6 +458,7 @@
                                         <option  value="">Select</option>
                                         <option value="yes">Yes</option>
                                         <option value="no">No</option>
+                                        <option value="drinksSocially">Drinks Socially</option>
 
                                     </select>
                                 </div>
@@ -470,6 +471,7 @@
                                         <option  value="">Select</option>
                                         <option value="yes">Yes</option>
                                         <option value="no">No</option>
+                                        <option value="occasionally">Occasionally</option>
                                     </select>
                                 </div>
 
